# sixth_street

./: README.md
boilerplate/: .env  .gitignore  Makefile  app.py  pyproject.toml
boilerplate/controllers/: stock_lookup.py  stock_min_max.py
boilerplate/models/: stock_models.py
boilerplate/services/: stock_service.py
boilerplate/tests/: test_app.py
boilerplate/utils/: cache.py
